--- a/app/globals.css
+++ b/app/globals.css
@@ -5,21 +5,45 @@
 }
 
 body {
-  margin: 25px;
+  position: relative;
+  display: flex;
+  justify-content: center; /* Centrer horizontalement */
+  align-items: center; /* Centrer verticalement */
+  height: 100vh;
+}
+
+.header {
+  text-align: center;
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+h2 {
+  font-style: italic;
+  color: cornflowerblue;
+}
+
+.game {
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 50px;
 }
 
 .square {
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 2rem;
   font-weight: bold;
-  line-height: 24px;
-  height: 50px;
-  /* margin-right: -1px;
-  margin-top: -1px; */
+  height: 100px;
+  width: 100px;
+  background: aliceblue;
   padding: 0;
   text-align: center;
-  width: 50px;
 }
 
 .board-row:after {
@@ -35,7 +59,34 @@ body {
 .winner {
   color: green;
   font-weight: bold;
+  font-size: 1.5rem;
 }
-.next-player {
+
+.next-player-indicator {
   color: coral;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.game-info {
+  margin-left: 25px;
+  margin-top: 7px;
+}
+
+.game-info li {
+  padding-bottom: 8px;
+}
+
+.game-info li button {
+  width: 120px;
+  padding: 4px;
+  background: aquamarine;
+  border: 1px solid;
+  border-radius: 3px;
+}
+
+.game-info li:first-of-type button {
+  background: deeppink;
+  color: white;
+  border: 1px solid black;
 }
